tests/ui/never_type/never-deref.stderr
error[E0614]: type `!` cannot be dereferenced
  --> $DIR/never-deref.rs:3:5
   |
LL |     *return
   |     ^^^^^^^ can't be dereferenced

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0614`.
